# pretix-automember

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pretixplugin.toml  pyproject.toml
pretix_automember/: apps.py  forms.py  signals.py  urls.py  views.py
pretix_automember/locale/de/LC_MESSAGES/: django.mo  django.po
pretix_automember/locale/de_Informal/LC_MESSAGES/: django.mo  django.po
pretix_automember/templates/pretix_automember/: settings.html
