[project]
name = "pretix-automember"
dynamic = ["version"]
description = "Auto assign membership to customers on login"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "activivan", email = "activivan.studios@gmail.com"},
]
maintainers = [
    {name = "activivan", email = "activivan.studios@gmail.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_automember = "pretix_automember:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/activivan/pretix-automember"
repository = "https://github.com/activivan/pretix-automember"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_automember.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
